# xapian-core

./: CMakeLists.txt  Makefile.in  README  config.h  config.h.in  configure  configure.ac
api/: compactor.cc
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
backends/glass/: glass_version.cc  glass_version.h
cmake/: xapian-config.cmake.in
common/: fileutils.cc  io_utils.h  safeunistd.h  stringutils.h
include/xapian/: attributes.h  compactor.h  version.h  visibility.h  weight.h
weight/: pl2plusweight.cc  pl2weight.cc
